# python_keepass_http

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
keepasshttp/: __init__.py  __main__.py  aes_256_cbc.py  keepass_http.py  keepass_http_credential.py  keepass_http_exceptions.py
tests/: __init__.py  __main__.py  mock.py  test_aes_256_cbc.py  test_cmd_line.py  test_database.kdbx  test_keePassHTTP.py  test_storage
