[bumpversion]
current_version = 1.3.0
commit = True
tag = True
sign = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt

[bumpversion:file:keepasshttp/__init__.py]

[flake8]
exclude = .git,__pycache__,.venv
max-complexity = 5
max-line-length = 120

[pydocstyle]
convention = pep257
match-dir = (src|tests)
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107

[tool:pytest]
testpaths = tests

[coverage:run]
source = ./keepasshttp

[coverage:report]
precision = 2
fail_under = 98
exclude_lines = 
	pragma: no cover
	raise KeePassHTTPException

